2002-03-02  Sam Steingold  <sds@gnu.org>

	YAICBCFA (yet another ICONV_CONST build problem fix attempt)
	* stream.d: check ICONV_CONST before using it
	* unixconf.h.in (ICONV_CONST): reverted the 2001-12-25 patch:
	use #undef, not #define; just like all other *_CONST macros

2002-03-02  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* spvw_language.d (current_language_o): typo: argument should be
	`uintL', not `uint'

2002-03-02  Sam Steingold  <sds@gnu.org>

	* package.d (%SET-PACKAGE-LOCK): do not barf
	when the package list is empty

2002-03-02  Sam Steingold  <sds@gnu.org>

	* linux.lisp (WEXITSTATUS, WTERMSIG, WSTOPSIG, WIFEXITED)
	(WIFSIGNALED, WIFSTOPPED, WCOREFLAG, WCOREDUMP, W_EXITCODE)
	(W_STOPCODE): added #define's from <bits/waitstatus.h>

2002-03-02  Sam Steingold  <sds@gnu.org>

	* regexp.lisp (with-loop-split): fixed :START/:END

2002-02-27  Sam Steingold  <sds@gnu.org>

	* linux.lisp (wait, waitpid): new C call-outs
	(provide "linux"): for (require "linux") in wrap.lisp

2002-03-01  Sam Steingold  <sds@gnu.org>

	error reporting unification
	* trace.lisp (error-function-name): new function
	(trace1): use it
	* cmacros.lisp (compiler-macro-function): ditto
	* error.d (fehler_funname_type, fehler_funname_source): new functions
	* lispbibl.d (fehler_funname_type, fehler_funname_source): declare
	* control.d (function): use fehler_funname_source()
	* eval.d (eval1): ditto
	(apply, funcall): use fehler_funname_type()

2002-02-02  Sam Steingold  <sds@gnu.org>

	* trace.lisp (force-cclosure): take FDEFINITION when compiling
	(%local-set): COMPILE NEW-DEF and take its FDEFINITION
	when NEW-DEF is not compiled

2002-02-28   Barry Fishman  <bfishman@users.sf.net>

	* clx.f (CONVERT-SELECTION): clean up the stack
	(SELECTION-NOTIFY): added window notification

2002-02-28  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): push *load-truename* on *load-paths*
	* compiler.lisp (c-REQUIRE): push *compile-file-truename*
	on *load-paths*
