@@ -1,3 +1,7 @@
+2002-03-03  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (data, clean1, ${TESTDIR}): use the appropriate slashes
+
 2002-03-02  Sam Steingold  <sds@gnu.org>
 
 	YAICBCFA (yet another ICONV_CONST build problem fix attempt)
